# nuri

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.agents/skills/nuri/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-or-modify-form-fields.md  feature-development.md
.claude/skills/nuri/: SKILL.md
.codex/: AGENTS.md
.codex/skills/api-design/: SKILL.md
.codex/skills/commit-changes/: SKILL.md
.codex/skills/create-github-issue/: SKILL.md
.codex/skills/frontend-patterns/: SKILL.md
.codex/skills/nestjs-patterns/: SKILL.md
.codex/skills/python-patterns/: SKILL.md
.codex/skills/verification-loop/: SKILL.md
apps/ai-worker/: Dockerfile  pyproject.toml
apps/ai-worker/app/: config.py  main.py
apps/ai-worker/app/summarization/: prompts.py  schemas.py  service.py
apps/ai-worker/app/supervision/: prompts.py  schemas.py  service.py
apps/ai-worker/tests/supervision/: test_schemas.py
apps/api/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/web/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: auth-provider.tsx  health-check.tsx  layout.tsx  page.tsx  styles.css
apps/web/lib/: auth-api.ts
apps/web/stores/: counseling-store.ts
docs/: README.md
docs/ai-worker/: README.md
docs/api/: README.md
docs/web/: README.md
infra/: docker-compose.yml
(+38 files in other folders)
