[project]
name = "nuri-ai-worker"
version = "0.1.0"
description = "Internal AI task worker for Nuri"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "openai>=2.0.0,<3",
    "pydantic-settings>=2.9.0,<3",
    "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "ruff>=0.12.0,<1",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
